--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ariogatewayexplorer",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "dependencies": {
     "@ar.io/sdk": "^3.14.0",
@@ -14,6 +14,7 @@
     "d3-geo": "^3.1.1",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
